# desktop-icons-applet

./: AUTHORS  NEWS  README.md  configure.ac.in
panel-plugin/: Makefile.am  desktop-icons-applet.c  desktop-icons-applet.desktop
po/: POTFILES.in
